Apple Possible fix for Safari on iOS

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ h2  {
   position: absolute;
   top: 11vh;
   left: -1vh;
+  z-index: -1;
 }
 
 .bluecircle {
@@ -36,6 +37,7 @@ h2  {
   position: absolute;
   top: 5.5vh;
   left: -7.5vh;
+  z-index: -1;
 }
 
 .yellowcircle {
@@ -46,6 +48,7 @@ h2  {
   position: absolute;
   top: -5vh;
   left: -1vh;
+  z-index: -1;
 }
 
 .redcircleMid {
@@ -56,6 +59,7 @@ h2  {
   position: absolute;
   top: 38vh;
   left: 10vh;
+  z-index: -1;
 }
 
 .bluecircleMid {
@@ -66,6 +70,7 @@ h2  {
   position: absolute;
   top: 44.5vh;
   left: 5vh;
+  z-index: -1;
 }
 
 .yellowcircleMid {
@@ -76,6 +81,7 @@ h2  {
   position: absolute;
   top: 41.5vh;
   left: 0vh;
+  z-index: -1;
 }
 
 .redcircleBot {
@@ -86,6 +92,7 @@ h2  {
   position: absolute;
   top: 54vh;
   left: 52vh;
+  z-index: -1;
 }
 
 .bluecircleBot {
@@ -96,6 +103,7 @@ h2  {
   position: absolute;
   top: 64.5vh;
   left: 48.5vh;
+  z-index: -1;
 }
 
 .yellowcircleBot {
@@ -106,6 +114,7 @@ h2  {
   position: absolute;
   top: 72.5vh;
   left: 50vw;
+  z-index: -1;
 }
 
 .under {
@@ -222,6 +231,14 @@ h2  {
   top: 1875px;
 }
 
+@supports (-webkit-touch-callout: none) {
+  .further_information  {
+    /*  Used to provide style to the section containing links */
+    top: 15vh;
+  }
+}
+
+
 /*  The below media query provides styles for landscape displays, i.e
     desktop monitor screens */
 
@@ -229,26 +246,12 @@ h2  {
 
   .further_information  {
     /*  Used to provide style to the section containing links */
-    position: absolute;
-    text-align: left;
     left: 50%;
     top: 0vh;
   }
 
   .further_information .title_sub  {
     display: none;
-  }
-
-  .redcircleMid  {
-    z-index: -1;
-  }
-
-  .bluecircleMid  {
-    z-index: -1;
-  }
-
-  .yellowcircleMid  {
-    z-index: -1;
   }
 
   .further_sub  {
